Port to JDK 21